KUBE/EKS-DEPLOYMENT/APP-3/kube/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app-3
spec:
  replicas: 1

  selector:
    matchLabels:
      app: app3-frontend

  template:
    metadata:
      labels:
        app: app3-frontend

    spec:
      containers:
        - name: app3-frontend
          image: docker.io/payalkharat/kubernetes-ingress:app3-frontend 
          imagePullPolicy: Always

          ports:
            - containerPort: 80
