KUBE/EKS-DEPLOYMENT/APP-3/kube/db-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: app3-db
  namespace: app-3

spec:
  type: ClusterIP

  selector:
    app: app3-db

  ports:
    - port: 3306
      targetPort: 3306
