KUBE/EKS-DEPLOYMENT/APP-3/kube/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-frontend
  namespace: app-3

spec:
  type: ClusterIP

  selector:
    app: app3-frontend

  ports:
    - port: 80
      targetPort: 80
