KUBE/EKS-DEPLOYMENT/APP-3/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-ingress
  namespace: app-3
  

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/transforms.app3-backend: >
      [{"type":"url-rewrite","urlRewriteConfig":{"rewrites":[{"regex":"^/api$","replace":"/"}]}}]

spec:
  ingressClassName: alb

  rules:
    - host: app3.local.com
      http:
        paths:

        
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app3-frontend
                port:
                  number: 80

         
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app3-backend
                port:
                  number: 8000
